--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/Student.png" class="card-img-top" alt="...">
+              <img class="slider-img" src="images/Student.png" class="card-img-top" alt="logo">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
@@ -85,7 +85,7 @@
           </div>
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/Test.png" class="card-img-top" alt="...">
+              <img class="slider-img" src="images/Test.png" class="card-img-top" alt="logo">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
@@ -94,7 +94,7 @@
           </div>
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/book.png" class="card-img-top" alt="...">
+              <img class="slider-img" src="images/book.png" class="card-img-top" alt="logo">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
@@ -103,7 +103,7 @@
           </div>
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/Students.png" class="card-img-top" alt="...">
+              <img class="slider-img" src="images/Students.png" class="card-img-top" alt="logo">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
@@ -118,7 +118,7 @@
     <!-- Online Courses-->
 
     <section class="py-5 mt-5">
-    <div class="container">
+    <div  class="container">
       <h1 class="text-center mb-5 fw-bold">Online Courses</h1>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
     <div class="d-flex justify-content">
@@ -128,7 +128,8 @@
           <h2 class="ms-4 mt-2 fw-bolder">Designation</h2>
           <button type="button" class="btn btn-outline-success sizemm">BAY COURSES</button>
           <div class="d-flex justify-content-between px-3">
-          <p><img class="mmmm" src="images/calendar.png" alt=""><small>Start 20 April,2021</small></p>
+          <p><img class="mmmm" src="images/calendar.png" alt="">
+            <small>Start 20 April,2021</small></p>
           <p><img class="mmee" src="images/people.png" alt=""><small>60 Seats</small></p>
           </div>
             </div>
@@ -157,8 +158,7 @@
           </div>
             </div>
           </div>
-        </div>  
-    </div> 
+        </div> 
     </div>
     </section>
 
