--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="col-12 col-md-6">
                         <img class="img-fluid" src="images/Illustration.png" alt="">
                     </div>
-                </div>
+                 </div>
             </div>
 
     </header>
@@ -119,7 +119,7 @@
 
     <section class="py-5 mt-5">
     <div  class="container">
-      <h1 class="text-center mb-5 fw-bold">Online Courses</h1>
+      <h1 class="text-center mb-5">Online Courses</h1>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
     <div class="d-flex justify-content">
       <div class="col">
@@ -159,7 +159,7 @@
             </div>
           </div>
         </div> 
-    </div>
+    <!-- <div/> -->
     </section>
 
 
