--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/Student.png" class="card-img-top" alt="">
+              <img class="slider-img" src="images/Student.png"alt="">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
@@ -85,7 +85,7 @@
           </div>
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/Test.png" class="card-img-top" alt="">
+              <img class="slider-img" src="images/Test.png" alt="">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
@@ -94,7 +94,7 @@
           </div>
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/book.png" class="card-img-top" alt="">
+              <img class="slider-img" src="images/book.png" alt="">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
