--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/Student.png"alt="">
+              <img class="slider-img" src="images/Student.png" alt="">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
@@ -103,7 +103,7 @@
           </div>
           <div class="col">
             <div class="card aaa pt-5">
-              <img class="slider-img" src="images/Students.png" class="card-img-top" alt="">
+              <img class="slider-img" src="images/Students.png" alt="">
               <div class="card-body">
                 <h5 class="card-title text-center">2000+ Student</h5>
                 <p class="card-text text-center">Learn Anythings</p>
@@ -164,9 +164,6 @@
 
 
 
-    <section>
-      <h1>bangla</h1>
-    </section>
 
 
     <script src="js/bootstrap.min.js"></script>
